--- a/views/addpage.html
+++ b/views/addpage.html
@@ -27,6 +27,12 @@
     </div>
   </div>
   <div class="form-group">
+      <label for="title" class="col-sm-2 control-label">Tags</label>
+      <div class="col-sm-10">
+        <input name="tags" type="text" class="form-control" />
+      </div>
+    </div>
+  <div class="form-group">
     <label for="title" class="col-sm-2 control-label">Page Status</label>
     <div class="col-sm-10">
       <input name="pageStatus" type="text" class="form-control" />
