--- a/views/user.html
+++ b/views/user.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %} {% block content %}
-<h3>Pages</h3>
+<h3>{{ user.name }}</h3>
+<h4>{{ user.email }}</h4>
 <hr />
 <ul class="list-unstyled">
-  <!-- PLACEHOLDER LIST OF PAGES -->
+  <h4>Pages:</h4>
   {% for page in pages %}
   <li>
     <a href="http://localhost:3000{{ page.route() }}">{{
